--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+	modImplementation "xyz.breadloaf.imguimc:imgui-mc:${project.1.21.3-1.0.9}"
+
 }
 
 processResources {
