--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-	modImplementation "xyz.breadloaf.imguimc:imgui-mc:${project.1.21.3-1.0.9}"
+	modImplementation "xyz.breadloaf.imguimc:imgui-mc:${project.imguimc_version}"
 
 }
 
