--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,11 @@ base {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	maven {
+		name = 'Fabric'
+		url = 'https://maven.fabricmc.net/'
+	}
+	mavenLocal()
 }
 
 loom {
@@ -43,7 +43,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-	modImplementation "xyz.breadloaf.imguimc:imgui-mc:${project.imguimc_version}"
+	modImplementation 'xyz.breadloaf.imguimc:imgui-mc:1.21.3-1.0.9'
 
 }
 
